--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
+
 {
-  "buildCommand": "npm run build",
+  "buildCommand": "cd client && npm install && npm run build",
   "outputDirectory": "client/dist",
-  "framework": "vite",
-  "root": "client"
+  "framework": "vite"
 }
