--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 
 {
-  "buildCommand": "cd client && npm install && npm run build",
+  "buildCommand": "npm install && npm run build",
   "outputDirectory": "client/dist",
-  "framework": "vite"
+  "framework": "vite",
+  "root": "client"
 }
